--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -193,17 +193,13 @@ hr {
   display: inline-block;
   background: #3367ae;
   padding: 8px 18px;
-  border-radius: 50px;
-  border: 2px solid rgba(0, 0, 0, 0.7);
-  border-bottom: 2px solid rgba(0, 0, 0, 0.7);
-  border-top: 2px solid rgba(0, 0, 0, 1);
-  color: rgba(255, 255, 255, 0.8);
+  border-radius: 4px;
+  color: rgba(255, 255, 255, 1);
   font-family: Helvetica, Arial, sans-serif;
   font-weight: bold;
   font-size: 13px;
   text-decoration: none;
-  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.75);
-  box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.05);
+  letter-spacing: normal;
 }
 
 .btn:hover {
